
	1995/05/14
		make this independent of TD_LIB includes and library

	1994/07/18
		renamed-program from 'lincnt' to 'c_count'

	1993/11/29
		tweaked to compile on MS-DOS

revision 7.0
------------
	1991/10/21
		(resync with TD_LIB)

revision 6.0
------------
	1991/10/21
		lint

	1991/10/16
		Header-label for spreadsheet had "STATEMENTS" and "LINES"
		interchanged (fixed).  Also, converted to ANSI prototypes.

revision 5.0
------------
	1991/05/23
		Mods for ANSI compiler (apollo sr10.3 cpp complains about
		endif-tags)

revision 4.0
------------
	1990/08/30
		history could be RCS or CMS (corrected message)

	1990/08/30
		if specific statistics are requested (e.g., "-s") and the
		"-t" option is set, coerce "-p" as well.

	1990/08/30
		Added 'filter_history()' procedure, which filters out the
		history-comments generated by RCS or DEC/CMS from the total
		for "normal" comments.  Only "normal" comments are shown in
		the comment:code ratio.

	1990/08/29
		corrected format of 'show_flag()'

revision 3.0
------------
	1990/05/21
		corrected final (per-file) call on 'Summary()'

	1990/05/21
		rewrote, adding options to make this behave like "a.count"

	1990/05/14
		added "-t" (spreadsheet/table) option

revision 2.0
------------
	1990/05/10 
		ported to VAX/VMS 5.3 (expand wildcards, added "-o" option).
		made usage-message more verbose

	1989/10/17
		assume "//" begins C++ inline comments

	1989/10/05
		lint (apollo SR10 "string" defs)

	1989/07/21
		"-" indicates that we read the file itself from standard-input, rather
		than names

	1988/06/01
		obtain number & length of tokens (identifiers and constants).

	1987/08/28
		SCO Xenix: use 'exit()' from main

	1987/07/01
		Added '-q', '-d' options so we can check kernel code, as
		written.  Added '-v' option; enhanced tests for illegal
		chars/comments.

	1986/11/07
		xenix-port.  Also, added checks for unbalanced quote/comments.

	1986/04/23
		Treat standard-input as a list of names, not a stream of code.

	1986/03/11